Add authorization checks to table service